--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <dt>暱稱 ：</dt><dd>rui</dd>
     <dt>職業 ：</dt><dd>網頁設計師</dd>
     <dt>mail ：</dt><dd><a href="mailto:qweasd74185285@gmail.com">qweasd74185285@gmail.com</a></dd>
-    <dt>Web ：</dt><dd><a href="http://roka404.main.jp/blog/" target="_blank">http://roka404.main.jp/blog/</a></dd>
+    <dt>Web ：</dt><dd><a href="https://rui9388.github.io/rui9388/" target="_blank">https://rui9388.github.io/rui9388/</a></dd>
   </dl>
 </section>
 
