--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>111111213 陳柏叡</title>
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
-</head>
-<body>
+   <style>
+    img{
+      height: 300px;
+      width: 300px;
+    }
+   </style>
+   <link rel="stylesheet" href="css/style.css">
+  </head>
+<body style="background-color: lightyellow;">
 <header>
     <h1>KOMA-NATSU Web</h1>
     <p>介紹一下我家的偶像貓咪們！</p>
@@ -34,14 +41,14 @@
   <h2>我家的貓咪</h2>
   <section>
     <h3>●小町（KOMACHI・♀）</h3>
-    <img src="img/komachi.jpg" width="480" height="320" alt="小町">
+    <img src="img/komachi.jpg" alt="小町">
     <p>出生不到2個月就到家的貓姐姐。<br>
 從出生就是養在溫室裡的花朵，所以非常膽小怕生。因為太怕生，只要聽到門鈴聲就會躲起來，所以就算是來我家的客人也難以見到。</p>
     <p><a href="cats/komachi.html">→更多介紹</a></p>
   </section>
   <section>
     <h3>●小夏（KONATSU・♀）</h3>
-    <img src="img/konatsu.jpg" width="480" height="320" alt="小夏">
+    <img src="img/konatsu.jpg" alt="小夏">
     <p>為了讓小町有個伴，在1年後抱回來貓妹妹。<br>
 原本是在埼玉縣飯能市的煤礦場出生長大的小野貓。和小町不同，是個性活潑親人，愛吃、愛玩、愛睡的元氣寶寶。</p>
     <p><a href="cats/konatsu.html">→更多介紹</a></p>
@@ -50,7 +57,7 @@
  
 <section id="profile">
   <h2>飼主介紹</h2>
-  <img src="img/avatar.png" width="250" height="250" alt="大頭照">
+  <img src="img/avatar.png" alt="大頭照">
   <dl>
     <dt>暱稱 ：</dt><dd>rui</dd>
     <dt>職業 ：</dt><dd>網頁設計師</dd>
